--- a/thesis.bib
+++ b/thesis.bib
@@ -24,6 +24,24 @@
  keywords = {decision-support systems, indoor environments, interoperability, ontology, semantics, spatial assistance, spatial computing, spatial data models},
 } 
 
+@book{Miller,
+ author = {Miller, Harvey J. and Han, Jiawei},
+ title = {Geographic Data Mining and Knowledge Discovery},
+ year = {2001},
+ isbn = {0415233690},
+ publisher = {Taylor \& Francis, Inc.},
+ address = {Bristol, PA, USA},
+} 
+
+@book{Korte,
+ author = {Korte, George},
+ title = {{The GIS Book}},
+ year = {2001},
+ publisher = {ONe Word Press},
+ address = {Albany, New York, USA},
+} 
+
+
 @inproceedings{Almendros-Jimenez,
  author = {Almendros-Jim\'{e}nez, Jes\'{u}s},
  title = {Constraint logic programming over sets of spatial objects},
